error when export Armature FBX and glTF #107965

Closed
opened 2023-05-16 11:18:21 +02:00 by Massimiliano Puliero · 8 comments

System Information
Operating system: Windows-10-10.0.19044-SP0 64 Bits
Graphics card: NVIDIA GeForce RTX 3070 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 528.49

Blender Version
Broken: version: 3.5.1, branch: blender-v3.5-release, commit date: 2023-04-24 18:11, hash: e1ccd9d4a1d3

Short description of error
When I try to export this specific armature I got some errors with FBX and also glTF.
Error occurs when boundaries of action range are beyond the value an int data type can store.

Exact steps for others to reproduce the error
Open the file and try to export it in FBX or glTF.

Thank you

Max


error:

FBX error:
Python: Traceback (most recent call last):
  File "C:\Users\MaxPuliero\Desktop\blender-3.5.1-windows-x64\3.5\scripts\addons\io_scene_fbx\__init__.py", line 661, in execute
    return export_fbx_bin.save(self, context, **keywords)
  File "C:\Users\MaxPuliero\Desktop\blender-3.5.1-windows-x64\3.5\scripts\addons\io_scene_fbx\export_fbx_bin.py", line 3261, in save
    ret = save_single(operator, context.scene, depsgraph, filepath, **kwargs_mod)
  File "C:\Users\MaxPuliero\Desktop\blender-3.5.1-windows-x64\3.5\scripts\addons\io_scene_fbx\export_fbx_bin.py", line 3137, in save_single
    scene_data = fbx_data_from_scene(scene, depsgraph, settings)
  File "C:\Users\MaxPuliero\Desktop\blender-3.5.1-windows-x64\3.5\scripts\addons\io_scene_fbx\export_fbx_bin.py", line 2506, in fbx_data_from_scene
    animations, animated, frame_start, frame_end = fbx_animations(tmp_scdata)
  File "C:\Users\MaxPuliero\Desktop\blender-3.5.1-windows-x64\3.5\scripts\addons\io_scene_fbx\export_fbx_bin.py", line 2211, in fbx_animations
    fbx_animations_do(scene_data, (ob, act), frame_start, frame_end, True,
  File "C:\Users\MaxPuliero\Desktop\blender-3.5.1-windows-x64\3.5\scripts\addons\io_scene_fbx\export_fbx_bin.py", line 2011, in fbx_animations_do
    scene.frame_set(int(currframe), subframe=currframe - int(currframe))
ValueError: Scene.frame_set(): error with argument 1, "frame" -  Function.frame value not in 'int' range ((-2147483647 - 1), 2147483647)
**System Information** Operating system: Windows-10-10.0.19044-SP0 64 Bits Graphics card: NVIDIA GeForce RTX 3070 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 528.49 **Blender Version** Broken: version: 3.5.1, branch: blender-v3.5-release, commit date: 2023-04-24 18:11, hash: `e1ccd9d4a1d3` **Short description of error** When I try to export this specific armature I got some errors with FBX and also glTF. Error occurs when boundaries of action range are beyond the value an `int` data type can store. **Exact steps for others to reproduce the error** Open the file and try to export it in FBX or glTF. Thank you Max - - - error: ``` FBX error: Python: Traceback (most recent call last): File "C:\Users\MaxPuliero\Desktop\blender-3.5.1-windows-x64\3.5\scripts\addons\io_scene_fbx\__init__.py", line 661, in execute return export_fbx_bin.save(self, context, **keywords) File "C:\Users\MaxPuliero\Desktop\blender-3.5.1-windows-x64\3.5\scripts\addons\io_scene_fbx\export_fbx_bin.py", line 3261, in save ret = save_single(operator, context.scene, depsgraph, filepath, **kwargs_mod) File "C:\Users\MaxPuliero\Desktop\blender-3.5.1-windows-x64\3.5\scripts\addons\io_scene_fbx\export_fbx_bin.py", line 3137, in save_single scene_data = fbx_data_from_scene(scene, depsgraph, settings) File "C:\Users\MaxPuliero\Desktop\blender-3.5.1-windows-x64\3.5\scripts\addons\io_scene_fbx\export_fbx_bin.py", line 2506, in fbx_data_from_scene animations, animated, frame_start, frame_end = fbx_animations(tmp_scdata) File "C:\Users\MaxPuliero\Desktop\blender-3.5.1-windows-x64\3.5\scripts\addons\io_scene_fbx\export_fbx_bin.py", line 2211, in fbx_animations fbx_animations_do(scene_data, (ob, act), frame_start, frame_end, True, File "C:\Users\MaxPuliero\Desktop\blender-3.5.1-windows-x64\3.5\scripts\addons\io_scene_fbx\export_fbx_bin.py", line 2011, in fbx_animations_do scene.frame_set(int(currframe), subframe=currframe - int(currframe)) ValueError: Scene.frame_set(): error with argument 1, "frame" - Function.frame value not in 'int' range ((-2147483647 - 1), 2147483647) ```
Massimiliano Puliero added the
Priority
Normal
Status
Needs Triage
Type
Report
labels 2023-05-16 11:18:22 +02:00
Member

Can confirm. I'll resubmit this report at add-ons repo
This error triggers due to out of range start frame value of action.
image

Can confirm. I'll resubmit this report at add-ons repo This error triggers due to out of range start frame value of action. ![image](/attachments/0565a748-cf29-4c86-8f44-35b930f5cba9)
Member

For workaround keep the start value to 0 since no keyframes are added on negative scale.

For workaround keep the start value to 0 since no keyframes are added on negative scale.
Blender Bot added
Status
Archived
and removed
Status
Needs Triage
labels 2023-05-16 15:49:34 +02:00
Member

This is not an add-on issue though. We should limit action range boundaries.
Currently action range don't have hardmin/hardmax. We could set them to MINFRAME & MAXFRAME.
@mont29 , what you think?
Will make PR/commit if you agree

This is not an add-on issue though. We should limit action range boundaries. Currently action range don't have hardmin/hardmax. We could set them to MINFRAME & MAXFRAME. @mont29 , what you think? Will make PR/commit if you agree
Blender Bot added
Status
Needs Triage
and removed
Status
Archived
labels 2023-05-16 16:03:58 +02:00
Pratik Borhade added
Status
Needs Info from Developers
and removed
Status
Needs Triage
labels 2023-05-16 16:04:09 +02:00

@PratikPB2123 that sounds reasonable yes, but imho this is more a topic for the Animation module?

@PratikPB2123 that sounds reasonable yes, but imho this is more a topic for the Animation module?
Member

yes, more related to Animation module.

yes, more related to Animation module.
Pratik Borhade self-assigned this 2023-05-16 18:45:02 +02:00
Member

Submitted the fix for it: #107985

Submitted the fix for it: https://projects.blender.org/blender/blender/pulls/107985
Pratik Borhade added
Status
Confirmed
and removed
Status
Needs Info from Developers
labels 2023-05-18 18:09:47 +02:00
Member

Should be fixed by e73273e24b
Thanks for reporting :)


@lichtwerk, am I supposed to submit a new PR to include versioning changes (for backporting)?

Should be fixed by e73273e24b0d814fccadbdea359d992f0643b7c4 Thanks for reporting :) - - - @lichtwerk, am I supposed to submit a new PR to include versioning changes (for backporting)?
Blender Bot added
Status
Archived
and removed
Status
Confirmed
labels 2023-07-06 11:02:03 +02:00
Member

@lichtwerk, am I supposed to submit a new PR to include versioning changes (for backporting)?

@PratikPB2123 : please check with the animation module in regards to if/how this should be backported

> @lichtwerk, am I supposed to submit a new PR to include versioning changes (for backporting)? @PratikPB2123 : please check with the animation module in regards to if/how this should be backported
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#107965
No description provided.